# 2025-p1-UniversalTze

./: README.md  pyproject.toml
todo/: __init__.py  endpoint.http
todo/views/: routes.py
