[project]
name = "package1"
version = "0.1.0"
description = "Just a test"
authors = [
    {name = "Tze Kheng Goh",email = "dgoh03625@yahoo.com"}
]
license = {text = "Free License"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
